# UCU_architecture_of_computer_systems

Additional_lab_parallel_integration_using_SIMD/: CMakeLists.txt  config.conf  main.cpp  start.sh
Additional_lab_parallel_integration_using_SIMD/include/: speed_tester.h
FPGA/: counter.v  first.qpf  first.qsf  first.qws
FPGA/db/: .cmp.kpt  first.(0).cnf.cdb  first.(0).cnf.hdb  first.asm.qmsg  first.asm.rdb  first.cmp.bpm  first.cmp.cdb  first.cmp.hdb  first.cmp.idb  first.cmp.logdb  first.cmp.rdb  first.cmp_merge.kpt  first.cyclonev_io_sim_cache.ff_n40c_fast.hsd  first.cyclonev_io_sim_cache.ii_100c_slow.hsd  first.db_info  first.eda.qmsg  first.fit.qmsg  first.hif  first.map.bpm  first.map.cdb  first.map.hdb  first.map.kpt  first.map.qmsg  first.map.rdb  first.map_bb.cdb  first.map_bb.hdb  first.pre_map.hdb  first.root_partition.map.reg_db.cdb  first.routing.rdb  first.rtlv.hdb  first.rtlv_sg.cdb  first.sta.qmsg  first.sta.rdb  first.sta_cmp.7_slow_1100mv_100c.tdb  first.tis_db_list.ddb  first.tiscmp.fast_1100mv_100c.ddb  first.tiscmp.fast_1100mv_n40c.ddb  first.tiscmp.fastest_slow_1100mv_85c.ddb  first.tiscmp.fastest_slow_1100mv_n40c.ddb  first.tiscmp.slow_1100mv_100c.ddb  (+4 more)
FPGA/first_lab/: first_lab.qpf  first_lab.qsf
FPGA/lab1/: Waveform.vwf  counter.qpf  counter.qsf  counter.qws  counter.v  counter.v.bak
FPGA/lab1/db/: .cmp.kpt  (+43 more)
FPGA/output_files/: first.asm.rpt  first.done  first.eda.rpt  first.fit.rpt  first.fit.summary  first.flow.rpt  first.jdi  first.map.rpt  first.map.summary  first.pin  first.sta.rpt  first.sta.summary
Parallel_integration_using_SIMD/: CMakeLists.txt  README.md  main.cpp  start.sh
Parallel_integration_using_SIMD/include/math/: langermann_f.h  manual_integration.h
Parallel_integration_using_SIMD/include/option_parser/: ConfigFileOpt.h
Parallel_integration_using_SIMD/src/: graph.py
Parallel_integration_using_SIMD/src/math/: langermann_f.cpp
Parallel_integration_using_SIMD/src/option_parser/: ConfigFileOpt.cpp
count_number_of_all_words/: .gitignore  CMakeLists.txt  README.md  config.conf  main.cpp  res_a.txt  res_n.txt  start.py  start.sh
count_number_of_all_words/includes/: archive_t.h  config_file.h  extractor.h  linear_extractor.h  linear_program.h  merge_maps.h  parallel_program.h  parser.h  print_maps_to_files.h  speed_tester.h  tqueue.h
count_number_of_all_words/smallorem/: smalllorem
count_number_of_all_words/src/: archive_t.cpp  config_file.cpp  linear_program.cpp  merge_maps.cpp  parallel_program.cpp  print_maps_to_files.cpp
count_number_of_first_words/: CMakeLists.txt
count_number_of_ngrams/: Cargo.toml  config.conf  start.sh
count_number_of_ngrams/src/: config_file.rs  linear_ngrams.rs  linear_program.rs  main.rs
count_number_of_ngrams/src/algorithms/: linear_ngrams.rs  parallel_program.rs
count_number_of_ngrams/src/my_collections/: mod.rs  mtree.rs  node.rs
cpp_training/: CMakeLists.txt  main.cpp
cpp_training2/: CMakeLists.txt  main.cpp  text.txt
cpp_training3/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  README.md  loremini.txt  main.cpp  start.sh
lab_1_count_number_of_first_word/: README.md  main.cpp  result.txt  start.sh
lab_2_parallel_integration/: CMakeLists.txt  README.md  execution.conf  main.cpp  start.sh
lab_2_parallel_integration/include/: speed_tester.h
lab_2_parallel_integration/src/: speed_tester.cpp
lab_3_count_number_of_words/: CMakeLists.txt
lab_4/: README.md  main.cpp  start.sh
lab_4/includes/: code_control.h
lab_4_count_number_of_words_in_dir/: .gitignore  CMakeLists.txt  README.md  durations.txt  main.cpp  start.py  test.cpp  test_config.conf
lab_4_count_number_of_words_in_dir/includes/: code_control.h  debug_control.h
lab_4_count_number_of_words_in_dir/includes/archivation/: archive_t.h  linear_extractor.h
lab_4_count_number_of_words_in_dir/includes/counting/: linear_program.h  map_helpers.h  parallel_program.h  visualization.h  word_count.h
lab_4_count_number_of_words_in_dir/includes/files/: config_file.h  file_interface.h
lab_4_count_number_of_words_in_dir/includes/merging/: merge_maps.h
lab_4_count_number_of_words_in_dir/includes/queues/: tqueue.h  tqueue_radio.h
lab_4_count_number_of_words_in_dir/src/archivation/: archive_t.cpp
lab_4_count_number_of_words_in_dir/src/counting/: linear_program.cpp  parallel_program.cpp  visualization.cpp  word_count.cpp
lab_4_count_number_of_words_in_dir/src/files/: config_file.cpp  file_interaface.cpp
lab_4_count_number_of_words_in_dir/src/merging/: merge_maps.cpp
lab_4_count_number_of_words_in_directory/: CMakeLists.txt  main.cpp
lab_5_count_number_of_words_high_resourses/: .gitignore  CMakeLists.txt  PVS-Studio.cmake  config.dat.example  main.cpp  massif.out.63674  start.sh  test.cpp
lab_6_mpi/: .gitignore  CMakeLists.txt  README.md  a.out  config.conf  heatmap.gif-h  hostfile  main.cpp  start.sh
lab_6_mpi/field/: Field.h  config.conf  field.txt  field_generation.py  field_generator.py
lab_6_mpi/includes/: code_control.h  code_controle.h  field.h  linear_program.h  m_matrix.h  main.h  mpi_program.h  speed_tester.h  visualization.h
lab_6_mpi/includes/exceptions/: index_exception.h  parser_exeption.h  visualization_exception.h
lab_6_mpi/includes/exeptions/: visualization_exception.h
lab_6_mpi/includes/files/: config_file.h
lab_6_mpi/includes/gif-h/: gif.h
lab_6_mpi/src/: linear_program.cpp  mpi_program.cpp  visualization.cpp
lab_6_mpi/src/files/: config_file.cpp
lab_6_mpi/src/gif-h/: gif.cpp
paralel_integral/: CMakeLists.txt  main.conf  main.cpp  start.sh
rust_count_number_of_ngrams/: .gitignore
tic-tac-toe/: CMakeLists.txt  main.cpp
tic-tac-toe/docs/: TTT_game.mdj
tic-tac-toe/include/: TTT_Game.h
tic-tac-toe/include/constants/: PlayerCharacters.h  UIModes.h
tic-tac-toe/include/exceptions/: IllegalCellAccess.h
tic-tac-toe/include/gameplay/: Cell.h  Field.h  Player.h
tic-tac-toe/include/ui/: AbstractUI.h  ConsoleUI.h
tic-tac-toe/src/: TTT_Game.cpp
tic-tac-toe/src/gameplay/: Cell.cpp  Field.cpp  Player.cpp
tic-tac-toe/src/ui/: AbstractUI.cpp  ConsoleUI.cpp
(+134 files in other folders)
