[package]
name = "count_number_of_ngrams"
version = "0.1.0"
authors = ["Mykola Morgunenko <Olli25010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"
rust-ini = "0.15"
tar = "0.4"
libarchive = "0.1.1"